--- a/meta/main.yml
+++ b/meta/main.yml
@@ -7,27 +7,11 @@ galaxy_info:
     - MIT
   min_ansible_version: 2.0
   platforms:
-    - name: EL
-      versions:
-        - all
-    - name: Fedora
-      versions:
-        - all
-    - name: Ubuntu
-      versions:
-        - all
     - name: Alpine
       versions:
         - all
-    - name: Archlinux
-      versions:
-        - all
-    - name: Debian
-      versions:
-        - jessie
-        - stretch
   galaxy_tags:
-    - development
+    - alpine
 
 dependencies:
   - src: andrewrothstein.sudoers
