--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,6 +1,6 @@
 ---
 # defaults file for alpine-iso-build
-alpine_iso_build_tag: v3.8
+alpine_iso_build_tag: v3.15
 alpine_iso_build_home_dir: /home/abuild
 alpine_iso_build_iso_dir: /home/abuild/isos
 alpine_iso_build_aports_dir: /home/abuild/aports
@@ -33,4 +33,4 @@ alpine_iso_build_apks:
   - xfsprogs
   - dosfstools
   - ntfs-3g
-alpine_iso_build_buildit: True
+alpine_iso_build_buildit: true
