ping role name in meta

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -12,6 +12,7 @@ galaxy_info:
         - all
   galaxy_tags:
     - alpine
+  role_name: alpine_iso_build
 
 dependencies:
   - andrewrothstein.sudoers
